docs/assets/css/index.css
:root {
  /*Neon vaporwave color palette*/
  --vaporwaveneon-pink: #ff007f;
  --vaporwaveneon-magenta: #e100ff;
  --vaporwaveneon-blue: #00e6e6;
  --vaporwaveneon-teal: #00ffcc;
  --vaporwaveneon-purple: #aa00ff;
  --vaporwaveneon-violet: #e600ff;
  --vaporwaveneon-turquoise: #00ffcc;
  --vaporwaveneon-aqua: #00ffe6;
  --vaporwaveneon-green: #00ff80;
  --vaporwaveneon-orange: #ff8000;
}


/* html {
  background-image: linear-gradient(to bottom right, #ff61c6ff, #f4ff61ff, #ff9900ff);
} */

h1 {
  /* color: rgb(0, 40, 46); */
  text-align: center;
  font-family: "Times New Roman", Calibri;
}

.wrapThis {
  max-width: 100%;
  word-wrap: break-word;
}

.hidden {
  display: none;
}

.centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

button#toggleButton {
  position: fixed;
  top: 10px;
  left: 10px;
  padding: 10px;
  cursor: pointer;
  background-color: #3498db;
  color: #fff;
  border: none;
  display: block;
  margin-bottom: 10px;
}

button#toggleButton:hover {
  background-color: #2980b9
}

button#lightMode {
  position: fixed;
  top: 50px;
  left: 10px;
  padding: 10px;
  cursor: pointer;
  background-color: #3498db;
  color: #fff;
  border: none;
  display: block;
  margin-bottom: 10px;
  clear: left;
}

button#lightMode:hover {
  background-color: #2980b9
}

#headshot {
  max-width: 20%;
  height: auto;
  display: block;
  margin: 0 auto;
}

body, html {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
  /* background-color: rgb(147, 242, 255); */
}

.section {
  height: 100vh;
  scroll-snap-align: start;
}

/* testing for styles of sections */

#section1 {
  border-top-style: inset;
  border-bottom-style: inset;
  /*background-color: var(--vaporwaveneon-aqua);*/
}

#section2 {
  border-top-style: inset;
  border-bottom-style: inset;
  /*background-color: var(--vaporwaveneon-magenta);*/
}

#section3 {
  border-top-style: inset;
  border-bottom-style: inset;
  /*background-color: var(--vaporwaveneon-orange);*/
}

@font-face {
  font-family: "Windows 95";
  src: url('../fonts/W95FA/W95FA.otf');
  src: url('../fonts/W95FA/w95fa.woff') format('woff'),
  url('../fonts/W95FA/w95fa.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

/* Stealing stuff for the thing mentioned in Index, from online tutorial
Gonna try and reverse engineer and figure out whats happening */

/* So as far as I'm understanding, I'm modifying stuff at various steps of nesting
with different display attributes, including that they don't exist until a hover happens on
a parent essentially.*/

/* Also seems as though if I wanted to make a menu system like this that is deeper in layers
I'd have to manage whatever was even deeper in, like nav ul ul ul ul or something*/

/* Interested in messing with the colors and borders a bunch, these defaults are fine but kinda ugly.
Gotta figure out exactly what "moz linear gradient" and "webkit linear gradient" mean*/

/* Gonna try to restyle this to look like a retro/vaporwave aesthetic*/

nav ul ul {
  display: none;
}

  nav ul li:hover > ul {
    display: block;
  }

nav ul {
  background: #efefef;
  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
  background: -webkit-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
  box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
  padding: 0 20px;
  /* border-radius: 10px; Not a fan of the rounded corners right now*/ 
  list-style: none;
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  display: inline-table;
}
  nav ul:after {
    content: ""; clear: both; display: block;
  }

nav ul li {
  float: left;
}

  nav ul li:hover {
    background: #4b545f;
    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
    background: -webkit-linear-gradient(top, #4f5964 0%, #5f6975 40%);
  }
    nav ul li:hover a {
      color: #fff;
    }
  
  nav ul li a {
    display: block; padding: 25px 40px;
    color: #757575; text-decoration: none;
  }

nav ul ul {
  background: #5f6975; border-radius: 0px; padding: 0;
  position: absolute; top: 100%;
}
  nav ul ul li {
    float: none;
    border-top: 1px solid #6b727c;
    border-bottom: 1px solid #575f6a;
    position: relative;
  }
    nav ul ul li a {
      padding: 15px 40px;
      color: #fff;
    }
      nav ul ul li a:hover {
        background: #4b545f;
      }

nav ul ul ul {
  position: absolute; left: 100%; top: 0;
}
/*
  @keyframes rainbowText {
    0% {
      background-position: 0% 0%;
    }
    100% {
      background-position: 200% 0%;
    }
  }

  .rainbow-text {
    font-family: 'Windows 95', 'Arial', sans-serif;
    font-size: 2em;
    background: linear-gradient(45deg, var(--vaporwaveneon-pink), var(vaporwaveneon-orange), var(--vaporwaveneon-blue), var(--vaporwaveneon-green));
    background-size: 200% 100%;
    color: #fff;
    background-clip: text;
    animation: rainbowText 5s linear infinite;
}
*/

/* Attempt 2 at animation */

@keyframes rainbowText {
  0% {
    color: var(--vaporwaveneon-pink);
  }
  25% {
    color: var(--vaporwaveneon-orange);
  }
  50% {
    color: var(--vaporwaveneon-blue);
  }
  75% {
    color: var(--vaporwaveneon-green);
  }
  100% {
    color: var(--vaporwaveneon-pink);
  }
}

.rainbow-text {
  font-family: 'Arial', sans-serif;
  font-size: 2em;
  animation: rainbowText 5s linear infinite;
}

